# mytruyen-microservice

./: README.md  docker-compose.yml
auth-service/: build.gradle
book-service/: .dockerignore  .env.example  .gitignore  README.md
book-service/alembic/: env.py
book-service/alembic/versions/: a46baa154e17_init.py
book-service/app/api/: deps.py
book-service/app/core/: config.py  security.py
book-service/app/crud/: genre.py  tag.py
mytruyen-be/: .coveragerc  Dockerfile  docker-compose.yml  pyproject.toml  pytest.ini
mytruyen-be/.github/workflows/: cd.yaml  ci.yaml
mytruyen-be/alembic/versions/: 30ab7edc6050_add_table_refresh_token.py  aa6f3fcc8ac5_add_index_for_chapter.py
mytruyen-be/app/: embedding_data.py  initial_data.py  main.py  models.py
mytruyen-be/app/api/: main.py
mytruyen-be/app/api/v1/: arq.py  auth.py  book.py  chapter.py  genre.py  stat.py  user.py
mytruyen-be/app/core/: db.py
mytruyen-be/app/crud/: auth.py  author.py  book.py  book_status.py  chapter.py  user.py
mytruyen-be/app/schema/: book_status.py  response.py  tag.py  user.py
mytruyen-be/app/service/: auth.py
mytruyen-be/app/utilities/: audio_transcription.py
mytruyen-be/app/utilities/exceptions/http/: exc_400.py  exc_403.py  exc_404.py
mytruyen-be/app/utilities/messages/exceptions/http/: exc_details.py
mytruyen-be/tests/: conftest.py
mytruyen-be/tests/api/: test_auth.py  test_author.py  test_chapter.py  test_crud.py  test_models.py  test_tag.py
mytruyen-gateway/: Dockerfile  build.gradle  settings.gradle
user-service/: Dockerfile  build.gradle
(+77 files in other folders)
